# Tably

./: Ace-file.py  LICENSE  README.md  TABLY_AI_SOLUTION_OVERVIEW.md  package-lock.json
backend/: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/agents/: config.py  menu_agent.py  orchestrator.py  ordering_agents.py  realtime_voice_demo.py  recommendation.py  restaurant_voice_agent.py  simple_nova_test.py  simple_voice_agent.py  swarm_orchestrator.py  swarm_tools.py  voice_ordering_agent.py
backend/app/api/: main.py
backend/app/api/dependencies/: auth.py
backend/app/api/endpoints/: __init__.py  auth.py  business.py  conversation.py  customer_preferences.py  menu_agent.py  menu_image_analysis.py  menu_items.py  order_tracking.py  ordering_agents.py  orders.py  restaurant_voice_ordering.py  simple_voice_ordering.py  test_all_endpoints.py  voice_ordering.py
backend/app/core/: app.py  config.py  supabase.py
backend/app/db/: __init__.py  business.py  menu_items.py  order_items.py  orders.py  stock_level.py
backend/app/models/: __init__.py  auth.py  business.py  menu_image_analysis.py  menu_items.py  order_items.py  ordering.py  orders.py  stock_levels.py
backend/app/services/: conversation_memory.py  menu_context_service.py  menu_image_analyzer.py  menu_validator.py  voice_streaming_service.py
backend/docs/: AMAZON_NOVA_UPDATE.md  API_OVERVIEW.md  AWS_SETUP_INSTRUCTIONS.md  COMPLETE_API_REFERENCE.md  DEVELOPMENT_GUIDE.md  LIMITED_ACCESS_SOLUTION.md  MENU_AGENT_ENDPOINTS.md  MENU_IMAGE_ANALYSIS_SUMMARY.md  ORDERING_SYSTEM.md  ORDERS_API.md  PDF_SUPPORT_UPDATE.md  QUICK_REFERENCE.md  README.md  VOICE_ORDERING.md  extract_only_demo.py  test_menu_analysis.py
backend/sql/: README.md  alter_business_add_column.sql  alter_menu_item.sql  alter_stock_levels_add_column.sql  migrate_users_to_auth.sql  orders_schema.sql  schema.sql
backend/tests/: restaurant_voice_boto3.py  test_conversation_memory.py  test_menu_agent.py  test_menu_agent_endpoints.py  test_ordering_system.py  test_swarm.py  voice_demo.py  voice_to_voice_demo.py
frontend/: package-lock.json  package.json  website_design.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: auth-guard.tsx  auth-interface.tsx  business-dashboard.tsx  (+13 more)
(+39 files in other folders)
