[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tably"
version = "0.1.0"
description = "AI-powered ordering system that lets customers place food orders via voice, chat, or UI while enabling businesses to manage menus, stock, and orders seamlessly."
readme = "README.md"
authors = [
    {name = "Capgemini"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "supabase>=2.7.4",
    "boto3>=1.34.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.2"
]

[project.urls]
"Homepage" = "https://github.com/noelabu/Tably"
"Bug Tracker" = "https://github.com/noelabu/Tably/issues"

[tool.setuptools]
packages = ["app"]
